# smartnode

./: .gitignore  build.gradle  gradle.properties  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle  local.properties  proguard-rules.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/libs/: android-skin.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_nodepp_smartnode_utils_Utils.h  mbed_client.c  mbed_client.h  utils.c  xxtea.c  xxtea.h
app/src/main/cpp/mbedtls/: CMakeLists.txt
app/src/main/java/dsig/: Dsig.java
app/src/main/java/msig/: Msig.java
app/src/main/java/nodepp/: Nodepp.java
app/src/main/java/outnodepp/: Outnodepp.java
app/src/main/res/anim/: alphain.xml  alphaout.xml  bottom_to_top.xml  left_top_out.xml  top_to_bottom.xml
app/src/main/res/color/: selector_voice_tint_color.xml
app/src/main/res/drawable/: bath_bg_shape.xml  btn_add_selector.xml  btn_cancle_selector.xml  btn_circle_below.xml  btn_code_nor_shape.xml  btn_code_press_shape.xml  btn_connect_selector.xml  btn_login_nor_shape.xml  btn_login_press_shape.xml  btn_login_selector.xml  btn_next_selector.xml  btn_ok_nor_shape.xml  btn_ok_press_shape.xml  btn_ok_selector.xml  btn_qq_selector.xml  dialog_spot.xml  dialog_spot1.xml  dialog_spot2.xml  dialog_spot3.xml  dialog_spot4.xml  edt_login_shape.xml  layer_progress.xml  light_change_animation.xml  play_seekbar_progress.xml  reset_device_animation.xml  rotating.xml  rotating_main.xml  seekbar_horizontal.xml  selector_add_device.xml  selector_add_socket_text.xml  selector_add_task.xml  (+60 more)
(+276 files in other folders)
